--- a/index.html
+++ b/index.html
@@ -1,101 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Project</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <h1>My Project</h1>
+      <h1>My Project</h1>
     </header>
 
     <section id="projects" class="section">
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="images/gone.jpg" alt="Project 1" class="project-image">
-                    <h3>Project 1</h3>
-                    <p>A description of what this project is about.</p>
-                    <div class="project-buttons">
-                        <a href="https://example.com" class="btn live-demo">Live Demo</a>
-                        <a href="https://github.com/username/repo" class="btn github">GitHub Code</a>
-                    </div>
-                    <!-- Technologies Used -->
-                    <div class="tech-stack">
-                        <h4>Technologies & Tools:</h4>
-                        <ul>
-                            <li><img src="images/html5-icon.png" alt="HTML5"></li>
-                            <li><img src="images/css3-icon.png" alt="CSS3"></li>
-                            <li><img src="images/js-icon.png" alt="JavaScript"></li>
-                            <li><img src="images/react-icon.png" alt="React"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <img src="images/gone2.jpg" alt="Project 2" class="project-image">
-                    <h3>Project 2</h3>
-                    <p>A description of what this project is about.</p>
-                    <div class="project-buttons">
-                        <a href="https://example.com" class="btn live-demo">Live Demo</a>
-                        <a href="https://github.com/username/repo" class="btn github">GitHub Code</a>
-                    </div>
-                    <!-- Technologies Used -->
-                    <div class="tech-stack">
-                        <h4>Technologies & Tools:</h4>
-                        <ul>
-                            <li><img src="images/python-icon.png" alt="Python"></li>
-                            <li><img src="images/django-icon.png" alt="Django"></li>
-                            <li><img src="images/postgresql-icon.png" alt="PostgreSQL"></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <img src="images/gone.jpg" alt="Project 3" class="project-image">
-                    <h3>Project 3</h3>
-                    <p>A description of what this project is about.</p>
-                    <div class="project-buttons">
-                        <a href="https://example.com" class="btn live-demo">Live Demo</a>
-                        <a href="https://github.com/username/repo" class="btn github">GitHub Code</a>
-                    </div>
-                    <!-- Technologies Used -->
-                    <div class="tech-stack">
-                        <h4>Technologies & Tools:</h4>
-                        <ul>
-                            <li><img src="images/node-icon.png" alt="Node.js"></li>
-                            <li><img src="images/express-icon.png" alt="Express.js"></li>
-                            <li><img src="images/mongodb-icon.png" alt="MongoDB"></li>
-                        </ul>
-                    </div>
-                </div>
+      <!-- <div class="page-bg"></div> -->
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <div class="project-card">
+            <img
+              src="images/WeatherApp.jpg"
+              alt="Project 1"
+              class="project-image"
+            />
+            <h3>Project 1</h3>
+            <p>A description of what this project is about.</p>
+            <div class="project-buttons">
+              <a
+                href="https://weather-app-live-forecast.onrender.com/"
+                class="btn live-demo"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/cleavon3/weather_app_live-_forecast"
+                class="btn github"
+                >GitHub Code</a
+              >
             </div>
+            <!-- Technologies Used -->
+            <div class="tech-stack">
+              <h4>Technologies & Tools:</h4>
+              <ul>
+                <li><img src="images/python.png" alt="Python" /></li>
+                <li><img src="images/streamlit.png" alt="Streamlit" /></li>
+                <li><img src="images/Render.png" alt="Render" /></li>
+                <!-- <li><img src="images/react-icon.png" alt="React" /></li> -->
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="images/gone2.jpg" alt="Project 2" class="project-image" />
+            <h3>Project 2</h3>
+            <p>A description of what this project is about.</p>
+            <div class="project-buttons">
+              <a href="https://motion-detector-3llq.onrender.com/" class="btn live-demo">Live Demo</a>
+              <a href="https://github.com/cleavon3/Motion_Detector" class="btn github"
+                >GitHub Code</a
+              >
+            </div>
+            <!-- Technologies Used -->
+            <div class="tech-stack">
+              <h4>Technologies & Tools:</h4>
+              <ul>
+                <li><img src="images/python.png" alt="Python" /></li>
+                <li><img src="images/streamlit.png" alt="Streamlit" /></li>
+                <li>
+                  <img src="images/Render.png" alt="Render" />
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="images/gone.jpg" alt="Project 3" class="project-image" />
+            <h3>Project 3</h3>
+            <p>A description of what this project is about.</p>
+            <div class="project-buttons">
+              <a href="https://example.com" class="btn live-demo">Live Demo</a>
+              <a href="https://github.com/username/repo" class="btn github"
+                >GitHub Code</a
+              >
+            </div>
+            <!-- Technologies Used -->
+            <div class="tech-stack">
+              <h4>Technologies & Tools:</h4>
+              <ul>
+                <li><img src="images/node-icon.png" alt="Node.js" /></li>
+                <li><img src="images/express-icon.png" alt="Express.js" /></li>
+                <li><img src="images/mongodb-icon.png" alt="MongoDB" /></li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <section id="contact" class="section">
-        <div class="container">
-            <p>If you'd like to work together or have any questions, feel free to reach out!</p>
-            <a href="mailto:your-email@example.com" class="btn contact-btn">Contact Me</a>
-        </div>
+      <div class="container">
+        <p>
+          If you'd like to work together or have any questions, feel free to
+          reach out!
+        </p>
+        <a href="mailto:your-email@example.com" class="btn contact-btn"
+          >Contact Me</a
+        >
+      </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 My Portfolio</p>
+      <p>&copy; 2024 My Portfolio</p>
     </footer>
 
     <script>
-        document.querySelectorAll('.btn').forEach(button => {
-            button.addEventListener('click', () => {
-                button.classList.add('clicked');
-                setTimeout(() => {
-                    button.classList.remove('clicked');
-                }, 300);
-            });
+      document.querySelectorAll(".btn").forEach((button) => {
+        button.addEventListener("click", () => {
+          button.classList.add("clicked");
+          setTimeout(() => {
+            button.classList.remove("clicked");
+          }, 300);
         });
+      });
     </script>
-</body>
+  </body>
 </html>
